Listed new recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/adobo.html">Pork Adobo</a>
+        <ul>
+            <li><a href="recipes/adobo.html">Pork Adobo</a></li>
+            <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a>/li>
+            <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
+        </ul>
     </body>
 </html>
