--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/adobo.html">Pork Adobo</a></li>
-            <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a>/li>
+            <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a></li>
             <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
         </ul>
     </body>
