--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+            <img src="./image0.jpg" alt="GYAT">
         <ul>
             <li><a href="recipes/adobo.html">Pork Adobo</a></li>
             <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a></li>
