--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Odin Recipe</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-            <img src="./image0.jpg" alt="GYAT">
-        <ul>
-            <li><a href="recipes/adobo.html">Pork Adobo</a></li>
-            <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a></li>
-            <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
-        </ul>
+        <div id="head">Odin Recipes</div>
+        <img class="odin" src="https://www.theodinproject.com/mstile-310x310.png" alt="the odin project logo">   
+            <div>
+                <ul class="list">
+                    <li><a href="recipes/adobo.html">Pork Adobo</a></li>
+                    <li><a href="recipes/eggfriedrice.html">Egg Fried Rice</a></li>
+                    <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
+                </ul>
+            </div>
     </body>
 </html>
